# logiapp

./: .gitignore  README.md  compose.yaml  package-lock.json  package.json
client/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
client/components/: IconButton.tsx  Login.tsx  SessionProvider.tsx  stripe.ts
client/pages/: [mandala_id].tsx  _app.tsx  idea_5w2h.tsx  idea_5w2h_types.tsx  index.tsx  logical_list.tsx  mandala.tsx  mandala_types.tsx  payment.tsx  start.tsx
client/pages/api/auth/: [...nextauth].ts  stripe_pay.ts
client/pages/idea_5w2h/: [idea_5w2h_id].tsx
client/pages/mandala/: [mandala_id].tsx
client/styles/: theme.tsx
design_doc/: coding.md
server/: .gitignore  .setup.cnf  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
server/alembic/: script.py.mako
server/alembic/versions/: 819ff886602b_create_table.py
server/api/: idea_5w2h_api.py  mandala_api.py  openai_api.py
server/sql/app/models/: model.py
server/sql/app/views/: view.py
server/sql/database/: database.py
server/sql/settings/: setting.py
server/tests/: test.db  test_5w2h.py
