[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["tomomiK <t0m0m1k221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
requests = "2.31.0"
flake8 = "6.1.0"
black = "23.7.0"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
click = "8.1.6"
crashtest = "0.4.1"
distlib = "0.3.7"
dulwich = "0.21.5"
filelock = "3.12.2"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jsonschema = "4.18.4"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
lockfile = "0.12.2"
mccabe = "0.7.0"
more-itertools = "10.0.0"
msgpack = "1.0.5"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.2"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.9.1"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
ptyprocess = "0.7.0"
pycodestyle = "2.11.0"
pycparser = "2.21"
pyflakes = "3.1.0"
pyproject-hooks = "1.0.0"
rapidfuzz = "2.15.1"
referencing = "0.30.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
shellingham = "1.5.0.post1"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.12.1"
trove-classifiers = "2023.7.6"
urllib3 = "1.26.16"
virtualenv = "20.24.2"
webencodings = "0.5.1"
xattr = "0.10.1"
zipp = "3.16.2"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
